--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./asset/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="square"></div>
+        </div>
+    </div>
     <script src="./asset/js/script.js"></script>
 </body>
 </html>
