add button end ex

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <button id="produce">crea</button>
+        <button id="produce">Crea</button>
         <div class="row">
             
         </div>
