add reset button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <button id="produce">Crea</button>
+        <button id="reset">Reset</button>
         <div class="row">
             
         </div>
